grpc_microservices/Minikube/analyze-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyze-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyze-service
  template:
    metadata:
      labels:
        app: analyze-service
    spec:
      containers:
      - name: analyze-service
        image: skullervo/analyze-service-timed:distributedQA
        ports:
        - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: analyze-service
spec:
  type: ClusterIP
  selector:
    app: analyze-service
  ports:
    - port: 50052
      targetPort: 50052
