grpc_microservices/Minikube/ct-analyze-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ct-analyze-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ct-analyze-service
  template:
    metadata:
      labels:
        app: ct-analyze-service
    spec:
      containers:
      - name: ct-analyze-service
        image: skullervo/ct-analyze-service:latest
        ports:
        - containerPort: 50054
---
apiVersion: v1
kind: Service
metadata:
  name: ct-analyze-service
spec:
  type: ClusterIP
  selector:
    app: ct-analyze-service
  ports:
    - port: 50054
      targetPort: 50054
