grpc_microservices/Minikube/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-web
  template:
    metadata:
      labels:
        app: django-web
    spec:
      containers:
      - name: django-web
        image: skullervo/django-web:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-web
spec:
  type: ClusterIP
  selector:
    app: django-web
  ports:
    - port: 8000
      targetPort: 8000
