grpc_microservices/Minikube/fetch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fetch-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fetch-service
  template:
    metadata:
      labels:
        app: fetch-service
    spec:
      containers:
      - name: fetch-service
        image: skullervo/fetch-service-timed:distributedQA
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: fetch-service
spec:
  type: ClusterIP
  selector:
    app: fetch-service
  ports:
    - port: 50051
      targetPort: 50051
