grpc_microservices/Minikube/portainer-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      serviceAccountName: portainer-sa
      containers:
      - name: portainer
        image: portainer/portainer-ce:latest
        ports:
        - containerPort: 9000
        - containerPort: 9443
        volumeMounts:
        - name: portainer-data
          mountPath: /data
        - name: docker-sock
          mountPath: /var/run/docker.sock
      volumes:
      - name: portainer-data
        emptyDir: {}
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: NodePort
  selector:
    app: portainer
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      nodePort: 30900
    - name: https
      port: 9443
      targetPort: 9443
      nodePort: 30943
