grpc_microservices/Minikube/xr-analyze-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xr-analyze-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xr-analyze-service
  template:
    metadata:
      labels:
        app: xr-analyze-service
    spec:
      containers:
      - name: xr-analyze-service
        image: skullervo/xr-analyze-service:latest
        ports:
        - containerPort: 50053
---
apiVersion: v1
kind: Service
metadata:
  name: xr-analyze-service
spec:
  type: ClusterIP
  selector:
    app: xr-analyze-service
  ports:
    - port: 50053
      targetPort: 50053
